--- a/transcode-video/package.json
+++ b/transcode-video/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "run-local-lambda --file index.js --event tests/event.json",
+    "deploy": "aws lambda update-function-code --function-name arn:aws:lambda:us-east-1:678323779555:function:transcode-video --zip-file fileb://Lambda-Deployment.zip",
+    "predeploy": "zip -r Lambda-Deployment.zip * -x *.zip *.json *.log"
   },
   "dependencies": {
-    "aws-sdk": "latest"
+    "aws-sdk": "^2.3.2"
   },
   "author": "x24ken",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "run-local-lambda": "^1.1.0"
+  }
 }
